[package]
name = "rustvaders"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [dependencies]
# crossterm = "0.23.2"
# rusty_audio = "1.2"
# rusty_time = "0.11"

[dependencies.sdl2]
version = "0.32.1"
features = ["image","ttf", "gfx", "unsafe_textures"]
